
# project name
set(PROJECT_NAME flak)

# version
set(FLAK_VERSION_MAJOR 1)
set(FLAK_VERSION_MINOR 0)
set(FLAK_VERSION ${FLAK_VERSION_MAJOR}.${FLAK_VERSION_MINOR}.0)
set(FLAK_SOVERSION 1)

# cmake project
cmake_minimum_required(VERSION 3.13)
project(${PROJECT_NAME} VERSION ${FLAK_VERSION} LANGUAGES CXX)

# build target properities
set(FLAK_TARGET_NAME ${PROJECT_NAME})
set(FLAK_TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(FLAK_TARGET_PRIVATE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

# install properities
set(FLAK_INSTALL_DIR ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}-${FLAK_VERSION})
set(FLAK_INSTALL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(FLAK_INSTALL_INCLUDE_EXPORT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/)

# config
set(FLAK_INSTALL_CONFIG_EXPORT_NAME ${PROJECT_NAME}Config)
set(FLAK_INSTALL_CONFIG_EXPORT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${FLAK_INSTALL_CONFIG_EXPORT_NAME}.cmake)

# config version
set(FLAK_INSTALL_CONFIG_VERSION_EXPORT_NAME ${PROJECT_NAME}ConfigVersion)
set(FLAK_INSTALL_CONFIG_VERSION_EXPORT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${FLAK_INSTALL_CONFIG_VERSION_EXPORT_NAME}.cmake)
set(FLAK_INSTALL_CONFIG_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 14)
include(GNUInstallDirs)

# library
add_library(${FLAK_TARGET_NAME} include src src/main.cpp)
add_library(${PROJECT_NAME}::${FLAK_TARGET_NAME} ALIAS ${FLAK_TARGET_NAME})

target_include_directories(
        ${FLAK_TARGET_NAME}
        PUBLIC
        $<BUILD_INTERFACE:${FLAK_INSTALL_INCLUDE_DIR}>
        $<INSTALL_INTERFACE:include>
        PRIVATE
        ${FLAK_TARGET_PRIVATE_DIR}
)

set_target_properties(
        ${FLAK_TARGET_NAME} PROPERTIES
        VERSION ${PROJECT_VERSION}
        SOVERSION ${FLAK_SOVERSION})

IF (WIN32)
    set(CMAKE_INSTALL_PREFIX ${FLAK_INSTALL_DIR})
ENDIF()

install(DIRECTORY ${FLAK_INSTALL_INCLUDE_EXPORT_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

include(CMakePackageConfigHelpers)
write_basic_package_version_file(
        ${FLAK_INSTALL_CONFIG_VERSION_EXPORT_FILE} COMPATIBILITY SameMajorVersion)

install(FILES ${FLAK_INSTALL_CONFIG_VERSION_EXPORT_FILE}
        DESTINATION ${FLAK_INSTALL_CONFIG_DIR})

install(TARGETS ${FLAK_TARGET_NAME}
        EXPORT ${FLAK_INSTALL_CONFIG_EXPORT_NAME}
        ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
        LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR})

install(EXPORT ${FLAK_INSTALL_CONFIG_EXPORT_NAME}
        DESTINATION ${FLAK_INSTALL_CONFIG_DIR}
        NAMESPACE ${PROJECT_NAME}::)

